--- a/frontend/src/components/GamePage/GamePage.css
+++ b/frontend/src/components/GamePage/GamePage.css
@@ -1,17 +1,18 @@
 .body {
     background-image: url('../../images/quiz-background.webp'); 
+    background-size: cover;
+    padding: 10px;
   }
   
   .game-page {
     font-family: Arial, sans-serif;
-    max-width: 800px;
-    max-height: 800px;
+    max-width: 1000px;
+    max-height: 1000px;
     margin: 0 auto; 
     padding: 20px;
-    background-color: rgb(255, 255, 255);
-    border: 1px solid black;
-    border-radius: 20px;
-    position: relative;
+    background-color: white;
+    border: 2px solid #000;
+    border-radius: 10;
   }
 .game-page h1 {
     text-align: center;
@@ -21,18 +22,12 @@
     font-weight: 600;
 
 }
-.game-page h2 {
-    font-size: 24px; /* Larger font size for question text */
-    font-weight: bold;
-    margin-bottom: 15px;
-    color: #ac2626; /* Adjust color as needed */
-}
 .timer {
-    font-size: 24px;
+    font-size: 28px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 10px;
-    color: #2196f3; /* Blue color */
+    color: #e40e0e; /* Blue color */
 }
 
 .question-container {
@@ -60,11 +55,11 @@
     margin-bottom: 10px;
     border: 1px solid #1c1818;
     cursor: pointer;
-    font-size: 24px;
+    font-size: 28px;
 }
 
 .option-button:hover {
-    background-color: #f0f0f0;
+    background-color: #fafafa;
 }
 
 .option-button.correct {
@@ -104,7 +99,7 @@
     cursor: pointer;
     border-radius: 4px;
     transition: background-color 0.3s ease;
-    font-size: large;
+    font-size: x-large;
 }
 
 .navigation button:hover {
@@ -112,8 +107,9 @@
 }
 
 .navigation button:disabled {
-    background-color: #ccc;
+    background-color: #3f4c4f;
     cursor: not-allowed;
+    
 }
 
 .navigation button + button {
