--- a/frontend/src/components/StartPage/StartPage.css
+++ b/frontend/src/components/StartPage/StartPage.css
@@ -12,7 +12,7 @@
   
   .start-page h1 {
     font-size: 3.5rem;
-    color: #fff; /* Adjust heading color for contrast */
+    color: #fff; 
   }
   
   .start-page p {
@@ -22,16 +22,11 @@
   }
   
   .start-button {
-    background-color: #007bff;
+    background-color: #ef470f;
     color: #fff;
-    font-size: 2rem;
-    padding: 10px 20px;
+    font-size: 30px;
+    padding: 20px 20px;
     border: none;
     border-radius: 10px;
     cursor: pointer;
   }
-  
-  .start-button:hover {
-    background-color: #0056b3;
-  }
-  
